--- a/login.html
+++ b/login.html
@@ -19,8 +19,6 @@
 </html>
 
 <style>
-/* 로그인 페이지에 맞춘 모바일 최적화 스타일 */
-
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
   margin: 0;
@@ -43,8 +41,7 @@ body {
 
 .container {
   width: 100%;
-  max-width: 400px;
-  padding: 24px;
+  padding: 24px 16px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -57,14 +54,15 @@ h2 {
   font-weight: 700;
   margin-bottom: 24px;
   align-self: flex-start;
+  width: 100%;
 }
 
 input[type="text"],
 input[type="password"] {
   width: 100%;
   font-size: 16px;
-  padding: 14px 16px;
-  margin-bottom: 16px;
+  padding: 18px 14px;
+  margin-bottom: 18px;
   border-radius: 12px;
   border: 1px solid #ccc;
   box-sizing: border-box;
@@ -73,7 +71,7 @@ input[type="password"] {
 .btn {
   width: 100%;
   font-size: 16px;
-  padding: 14px 16px;
+  padding: 18px 14px;
   background-color: #007bff;
   color: white;
   border: none;
@@ -111,7 +109,8 @@ a:hover {
   input[type="password"],
   .btn {
     font-size: 15px;
-    padding: 12px 14px;
+    padding: 16px 12px;
+    width: 100%;
   }
   h2 {
     font-size: 22px;
@@ -120,5 +119,7 @@ a:hover {
     height: 35vh;
   }
 }
+
+
 
 </style>
