--- a/explore.html
+++ b/explore.html
@@ -19,5 +19,7 @@
       </div>
     </div>
   </div>
+
+<iframe src="bottom_nav.html" style="width: 100%; height: 64px; border: none;"></iframe>
 </body>
 </html>
