--- a/post.html
+++ b/post.html
@@ -16,4 +16,5 @@
     <button class="btn">Post</button>
   </div>
 </body>
+<iframe src="bottom_nav.html" style="width: 100%; height: 64px; border: none;"></iframe>
 </html>
