--- a/post_detail.html
+++ b/post_detail.html
@@ -14,5 +14,6 @@
     <p>000</p>
     <p>2025.07.19</p>
   </div>
+  <iframe src="bottom_nav.html" style="width: 100%; height: 64px; border: none;"></iframe>
 </body>
 </html>
