--- a/post_leaderboard.html
+++ b/post_leaderboard.html
@@ -35,5 +35,6 @@
       </div>
     </div>
   </div>
+  <iframe src="bottom_nav.html" style="width: 100%; height: 64px; border: none;"></iframe>
 </body>
 </html>
