--- a/profile.html
+++ b/profile.html
@@ -3,24 +3,213 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
   <title>My Page</title>
+  <style>
+    :root { font-size: 16px; }
+    body {
+      margin: 0; padding: 0;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+      background-color: #fff;
+      display: flex; justify-content: center;
+    }
+    .container {
+      width: 100%; max-width: 480px;
+      padding: 1rem; padding-bottom: 6rem;
+      box-sizing: border-box;
+    }
+    .profile-section {
+      text-align: center; margin-bottom: 1.5rem;
+    }
+    .profile-section .title { font-size: 1rem; font-weight: 500; color: #444; margin-bottom: .5rem; }
+    .profile-section .class { font-size: 2rem; font-weight: 700; color: #000; margin-bottom: .25rem; }
+    .profile-section .id-label {
+      font-size: 1rem; color: #444; line-height: 1.4;
+    }
+    .profile-section .id-label strong {
+      font-weight: 700; color: #000;
+    }
+    .divider {
+      border: none; height: 1px; background-color: #ccc; margin: 1rem 0;
+    }
+
+    .events-title {
+      font-size: 1rem; font-weight: 600; color: #444; margin-bottom: .75rem;
+    }
+    .events-list .event-item {
+      display: flex; align-items: center;
+      background-color: #F8F9FE; border-radius: 1rem;
+      overflow: hidden; margin-bottom: .75rem;
+      height: 4rem;
+      margin-bottom: 1.2rem;
+    }
+    /* 이미지가 왼쪽에 오도록 순서만 변경 */
+    .event-item img.event-thumb {
+      width: 4rem; height: 100%;
+      object-fit: cover; flex-shrink: 0;
+    }
+    .event-item .event-info {
+      display: flex; align-items: center;
+      justify-content: space-between;
+      flex: 1; padding: 0 1rem;
+    }
+    .event-item .event-date {
+      font-size: 1rem; font-weight: 600; color: #000;
+    }
+    .event-item .event-actions img {
+      width: 1.25rem; height: 1.25rem; margin-left: .75rem;
+      cursor: pointer;
+    }
+
+    iframe.bottom-nav {
+      width: 100%; height: 64px; border: none;
+      position: fixed; bottom: 0; left: 0; z-index: 1000;
+    }
+    @media screen and (max-width: 480px) { :root { font-size: 4vw; } }
+  </style>
 </head>
 <body>
   <div class="container">
-    <h2>My Page</h2>
-    <p>3-1</p>
-    <p>ID</p>
-    <p>학번</p>
-    <div class="event-list">
-      <div class="event-item">
-        <div class="image-preview"></div>
-        <span>2025.07.20</span>
-        <button>Edit</button>
-        <button>Delete</button>
+    <!-- 프로필 -->
+    <div class="profile-section">
+      <div class="title" style="margin-top: 2rem;">my page</div>
+      <div class="class">3-1</div>
+      <div class="id-label">
+        <strong style="font-size: 1.1rem;">ID</strong><br>학번
       </div>
     </div>
+
+    <hr class="divider">
+
+    <!-- 이벤트 목록 -->
+    <div class="events-title" style="font-weight: 700; color: black;">Your events</div>
+    <div class="events-list">
+      <!-- 예시: 2025.07.01 ~ 2025.07.20 까지 20개 -->
+      <div class="event-item">
+        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <div class="event-info">
+          <div class="event-date">2025.07.01</div>
+          <div class="event-actions">
+            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
+            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
+          </div>
+        </div>
+      </div>
+      <!-- ...이하 날짜만 바꿔서 20개 반복... -->
+      <div class="event-item">
+        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <div class="event-info">
+          <div class="event-date">2025.07.20</div>
+          <div class="event-actions">
+            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
+            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
+          </div>
+        </div>
+      </div>
+      <div class="event-item">
+        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <div class="event-info">
+          <div class="event-date">2025.07.20</div>
+          <div class="event-actions">
+            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
+            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
+          </div>
+        </div>
+      </div>
+      <div class="event-item">
+        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <div class="event-info">
+          <div class="event-date">2025.07.20</div>
+          <div class="event-actions">
+            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
+            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
+          </div>
+        </div>
+      </div>
+      <div class="event-item">
+        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <div class="event-info">
+          <div class="event-date">2025.07.20</div>
+          <div class="event-actions">
+            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
+            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
+          </div>
+        </div>
+      </div>
+      <div class="event-item">
+        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <div class="event-info">
+          <div class="event-date">2025.07.20</div>
+          <div class="event-actions">
+            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
+            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
+          </div>
+        </div>
+      </div>
+      <div class="event-item">
+        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <div class="event-info">
+          <div class="event-date">2025.07.20</div>
+          <div class="event-actions">
+            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
+            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
+          </div>
+        </div>
+      </div>
+      <div class="event-item">
+        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <div class="event-info">
+          <div class="event-date">2025.07.20</div>
+          <div class="event-actions">
+            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
+            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
+          </div>
+        </div>
+      </div>
+      <div class="event-item">
+        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <div class="event-info">
+          <div class="event-date">2025.07.20</div>
+          <div class="event-actions">
+            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
+            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
+          </div>
+        </div>
+      </div>
+      <div class="event-item">
+        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <div class="event-info">
+          <div class="event-date">2025.07.20</div>
+          <div class="event-actions">
+            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
+            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
+          </div>
+        </div>
+      </div>
+      <div class="event-item">
+        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <div class="event-info">
+          <div class="event-date">2025.07.20</div>
+          <div class="event-actions">
+            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
+            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
+          </div>
+        </div>
+      </div>
+      <div class="event-item">
+        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <div class="event-info">
+          <div class="event-date">2025.07.20</div>
+          <div class="event-actions">
+            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
+            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
-  <iframe src="bottom_nav.html" style="width: 100%; height: 64px; border: none;"></iframe>
+
+  <!-- 바텀 내비게이션 -->
+  <iframe class="bottom-nav" src="bottom_nav.html"></iframe>
 </body>
 </html>
