--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,7 @@
     <div class="events-list">
       <!-- 예시: 2025.07.01 ~ 2025.07.20 까지 20개 -->
       <div class="event-item">
-        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <img class="event-thumb" src="images/blank_image.png" alt="이벤트 이미지">
         <div class="event-info">
           <div class="event-date">2025.07.01</div>
           <div class="event-actions">
@@ -96,9 +96,9 @@
       </div>
       <!-- ...이하 날짜만 바꿔서 20개 반복... -->
       <div class="event-item">
-        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <img class="event-thumb" src="images/blank_image.png" alt="이벤트 이미지">
         <div class="event-info">
-          <div class="event-date">2025.07.20</div>
+          <div class="event-date">2025.07.01</div>
           <div class="event-actions">
             <img src="images/post_leaderboard/edit_icon.png" alt="수정">
             <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
@@ -106,9 +106,9 @@
         </div>
       </div>
       <div class="event-item">
-        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <img class="event-thumb" src="images/blank_image.png" alt="이벤트 이미지">
         <div class="event-info">
-          <div class="event-date">2025.07.20</div>
+          <div class="event-date">2025.07.01</div>
           <div class="event-actions">
             <img src="images/post_leaderboard/edit_icon.png" alt="수정">
             <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
@@ -116,9 +116,9 @@
         </div>
       </div>
       <div class="event-item">
-        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <img class="event-thumb" src="images/blank_image.png" alt="이벤트 이미지">
         <div class="event-info">
-          <div class="event-date">2025.07.20</div>
+          <div class="event-date">2025.07.01</div>
           <div class="event-actions">
             <img src="images/post_leaderboard/edit_icon.png" alt="수정">
             <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
@@ -126,9 +126,9 @@
         </div>
       </div>
       <div class="event-item">
-        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <img class="event-thumb" src="images/blank_image.png" alt="이벤트 이미지">
         <div class="event-info">
-          <div class="event-date">2025.07.20</div>
+          <div class="event-date">2025.07.01</div>
           <div class="event-actions">
             <img src="images/post_leaderboard/edit_icon.png" alt="수정">
             <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
@@ -136,9 +136,9 @@
         </div>
       </div>
       <div class="event-item">
-        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <img class="event-thumb" src="images/blank_image.png" alt="이벤트 이미지">
         <div class="event-info">
-          <div class="event-date">2025.07.20</div>
+          <div class="event-date">2025.07.01</div>
           <div class="event-actions">
             <img src="images/post_leaderboard/edit_icon.png" alt="수정">
             <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
@@ -146,9 +146,9 @@
         </div>
       </div>
       <div class="event-item">
-        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <img class="event-thumb" src="images/blank_image.png" alt="이벤트 이미지">
         <div class="event-info">
-          <div class="event-date">2025.07.20</div>
+          <div class="event-date">2025.07.01</div>
           <div class="event-actions">
             <img src="images/post_leaderboard/edit_icon.png" alt="수정">
             <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
@@ -156,9 +156,9 @@
         </div>
       </div>
       <div class="event-item">
-        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <img class="event-thumb" src="images/blank_image.png" alt="이벤트 이미지">
         <div class="event-info">
-          <div class="event-date">2025.07.20</div>
+          <div class="event-date">2025.07.01</div>
           <div class="event-actions">
             <img src="images/post_leaderboard/edit_icon.png" alt="수정">
             <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
@@ -166,9 +166,9 @@
         </div>
       </div>
       <div class="event-item">
-        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <img class="event-thumb" src="images/blank_image.png" alt="이벤트 이미지">
         <div class="event-info">
-          <div class="event-date">2025.07.20</div>
+          <div class="event-date">2025.07.01</div>
           <div class="event-actions">
             <img src="images/post_leaderboard/edit_icon.png" alt="수정">
             <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
@@ -176,35 +176,16 @@
         </div>
       </div>
       <div class="event-item">
-        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
+        <img class="event-thumb" src="images/blank_image.png" alt="이벤트 이미지">
         <div class="event-info">
-          <div class="event-date">2025.07.20</div>
+          <div class="event-date">2025.07.01</div>
           <div class="event-actions">
             <img src="images/post_leaderboard/edit_icon.png" alt="수정">
             <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
           </div>
         </div>
       </div>
-      <div class="event-item">
-        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
-        <div class="event-info">
-          <div class="event-date">2025.07.20</div>
-          <div class="event-actions">
-            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
-            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
-          </div>
-        </div>
-      </div>
-      <div class="event-item">
-        <img class="event-thumb" src="blank_image.png" alt="이벤트 이미지">
-        <div class="event-info">
-          <div class="event-date">2025.07.20</div>
-          <div class="event-actions">
-            <img src="images/post_leaderboard/edit_icon.png" alt="수정">
-            <img src="images/post_leaderboard/trash_icon.png" alt="삭제">
-          </div>
-        </div>
-      </div>
+      
 
     </div>
   </div>
