--- a/rank.html
+++ b/rank.html
@@ -178,7 +178,7 @@
         <div class="label">2-1<br><span style="font-size:0.75rem; color:#888;">40 pts</span></div>
       </div>
       <div class="rank-item">
-        <img src="images/crown.png" class="crown" alt="Crown">
+        <img src="images/rank/crown.png" class="crown" alt="Crown">
         <div class="circle">1<sup>st</sup></div>
         <div class="label">3-1<br><span style="font-size:0.75rem; color:#888;">43 pts</span></div>
       </div>
