--- a/explore.html
+++ b/explore.html
@@ -35,12 +35,12 @@
 </head>
 <body>
   <div class="container">
-    <h2>Planner Explore</h2>
+    <h2 style="padding-top: 2rem;">Planner View</h2>
     <div class="search-bar">
       <img src="images/explore/search.png" alt="search icon">
       <input type="text" placeholder="1-7">
     </div>
-    <div class="controls">
+    <div class="controls" style="padding-bottom: 1rem;">
       <button id="sortBtn"><img src="images/explore/sort.png" alt="Sort icon">Sort</button>
       <button id="filterBtn"><img src="images/explore/filter.png" alt="Filter icon">Filter</button>
       <div id="sortPopup" class="popup-menu">
