--- a/post.html
+++ b/post.html
@@ -122,6 +122,7 @@
         width: 80%; 
         display: block;
         margin: 0 auto;
+        height: 3rem;
     }
     /* 하단 네비 */
     iframe.bottom-nav {
