--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="logo-box"></div>
+    <div class="logo-box"><img src="images/blank_image.png" alt="뒤로가기"></div>
     <h2>Welcome!</h2>
     <input type="text" placeholder="학번">
     <input type="password" placeholder="Password">
@@ -31,16 +31,18 @@ body {
 
 .logo-box {
   width: 100%;
-  height: 40vh;
+  height: 60%;
   background-color: #e7f0ff;
   display: flex;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
+  
 }
 
 .container {
   width: 100%;
+  height: 100%;
   padding: 24px 16px;
   box-sizing: border-box;
   display: flex;
