--- a/post_feed.html
+++ b/post_feed.html
@@ -22,6 +22,8 @@
       position: relative;
       display: flex; align-items: center; justify-content: center;
       padding: 1.5rem 0 1rem;
+      padding-bottom: 3rem;
+      padding-top: 2rem;
     }
     .back-btn {
       position: absolute; left: 0;
@@ -53,7 +55,7 @@
       overflow: hidden;
       display: flex; align-items: center; justify-content: center;
       padding: 1rem 0;
-      margin-bottom: 1rem;
+      margin-bottom:0.2rem;
       margin-top: -8%;
     }
     .carousel .side {
