--- a/public/bottom_nav.html
+++ b/public/bottom_nav.html
@@ -1,18 +1,18 @@
 <!-- Bottom Navigation (독립 HTML) -->
 <nav class="bottom-nav">
-  <a href="#" class="nav-item active">
+  <a href="explore.html" target="_parent" class="nav-item active">
     <img src="images/bottom_nav/explore.png" alt="Explore">
     <span>explore</span>
   </a>
-  <a href="#" class="nav-item">
+  <a href="post.html" target="_parent" class="nav-item">
     <img src="images/bottom_nav/post.png" alt="Post">
     <span>post</span>
   </a>
-  <a href="#" class="nav-item">
+  <a href="post_leaderboard.html" target="_parent" class="nav-item">
     <img src="images/bottom_nav/rank.png" alt="Rank">
     <span>rank</span>
   </a>
-  <a href="#" class="nav-item">
+  <a href="profile.html" target="_parent" class="nav-item">
     <img src="images/bottom_nav/profile.png" alt="Profile">
     <span>profile</span>
   </a>
