--- a/public/profile.html
+++ b/public/profile.html
@@ -72,7 +72,7 @@
     <!-- 프로필 -->
     <div class="profile-section">
       <div class="title" style="margin-top: 2rem;">my page</div>
-      <div class="class">3-1</div>
+      <div class="class"><span id="student-class"></span></div>
       <div class="id-label">
         <strong style="font-size: 1.1rem;">ID <span id="username"></span></strong>
         <br>학번 <span id="student-id"></span>
@@ -194,9 +194,12 @@
     //로컬에서 학번 가져오기
     const student_id = localStorage.getItem('student_id');
     const username = localStorage.getItem('username');
+    const student_class = student_id ? `${student_id[0]}-${parseInt(student_id.slice(1, 3))}` : '학번 없음';
+    console.log(student_class);
     // 페이지 로드 시 학번과 이름을 표시
     document.getElementById('student-id').textContent = student_id || '학번 없음';
     document.getElementById('username').textContent = username || '이름 없음'; 
+    document.getElementById('student-class').textContent = student_class;
     console.log('학번:', student_id, '이름:', username);
   </script>
   <!-- 바텀 내비게이션 -->
