--- a/public/bottom_nav.html
+++ b/public/bottom_nav.html
@@ -8,7 +8,7 @@
     <img src="images/bottom_nav/post.png" alt="Post">
     <span>post</span>
   </a>
-  <a href="post_leaderboard.html" target="_parent" class="nav-item">
+  <a href="/rank" target="_parent" class="nav-item">
     <img src="images/bottom_nav/rank.png" alt="Rank">
     <span>rank</span>
   </a>
