--- a/public/login.html
+++ b/public/login.html
@@ -10,6 +10,7 @@
   <div class="container">
     <div class="logo-box"><img src="images/blank_image.png" alt="뒤로가기"></div>
     <h2>Welcome!</h2>
+    <p>자게 좀 해줘요</p>
     <input type="number" id="num" placeholder="학번">
     <p id="error1">errorMessage 1</p>
     <input type="password" id="pass" placeholder="비밀번호">
