leaderboard imsi end

--- a/public/post.html
+++ b/public/post.html
@@ -167,7 +167,7 @@
   </div>
 
   <!-- 하단 네비 -->
-  <iframe class="bottom-nav" src="bottom_nav.html"></iframe>
+  <iframe class="bottom-nav" src="/bottom_nav.html"></iframe>
 
   <script>
     // 이미지 업로드 미리보기
