--- a/public/profile.html
+++ b/public/profile.html
@@ -90,6 +90,6 @@
   </div>
   <script src="js/profile.js"></script>
   <!-- 바텀 내비게이션 -->
-  <iframe class="bottom-nav" src="bottom_nav.html"></iframe>
+  <iframe class="bottom-nav" src="/bottom_nav.html"></iframe>
 </body>
 </html>
