--- a/public/post_feed.html
+++ b/public/post_feed.html
@@ -140,6 +140,6 @@
   </div>
 
   <!-- 하단 네비게이션 -->
-  <iframe class="bottom-nav" src="bottom_nav.html"></iframe>
+  <iframe class="bottom-nav" src="/bottom_nav.html"></iframe>
 </body>
 </html>
