로그인이미지 + 포스트안내메시지

--- a/public/login.html
+++ b/public/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="logo-box"><img src="images/blank_image.png" alt="뒤로가기"></div>
+    <div class="logo-box"><img src="images/login_image.png" alt="뒤로가기"></div>
     <h2>Welcome!</h2>
     <input type="number" id="num" placeholder="학번">
     <p id="error1">errorMessage 1</p>
