--- a/public/login.html
+++ b/public/login.html
@@ -6,10 +6,14 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/login.css">
   <title>Plog</title>
+  <meta property="og:title" content="운정고 스터디플래너 인증 이벤트" />
+  <meta property="og:description" content="학생자치회 혜윰 X 세미콜론 P-LOG 스터디플래너 인증행사" />
+  <meta property="og:image" content="https://ujhs-plog.co.kr/public/images/preview.png" />
+  <meta property="og:url" content="https://ujhs-plog.co.kr" />
 </head>
 <body>
   <div class="container">
-    <div class="logo-box"><img src="images/blank_image.png" alt="뒤로가기"></div>
+    <div class="logo-box"><img src="images/login_image.png" alt="뒤로가기"></div>
     <h2>Welcome!</h2>
     <input type="number" id="num" placeholder="학번">
     <p id="error1">errorMessage 1</p>
