회원가입 시 학번 유효성 검사 강화(번호까지 유효해야 통과)

--- a/public/login.html
+++ b/public/login.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/login.css">
   <title>Plog</title>
   <meta property="og:title" content="운정고 스터디플래너 인증 이벤트" />
-  <meta property="og:description" content="학생자치회 혜윰 X 세미콜론 P-LOG 스터디플래너 인증행사" />
+  <meta property="og:description" content="학생자치회 혜윰 X 세미콜론 PLOG 스터디플래너 인증행사" />
   <meta property="og:url" content="https://ujhs-plog.co.kr" />
 </head>
 <body>
